update: Fixed spacing in Documentation pages

--- a/css/document.css
+++ b/css/document.css
@@ -178,7 +178,7 @@ body {
 
 .content-divider {
     width: 98%;
-    margin: 0.3rem 0.5rem 0.3rem 0;
+    margin: 3rem 0.5rem 3rem 0;
     border-bottom: 1px solid var(--gray-color);
 }
 
@@ -189,15 +189,19 @@ body {
 
 .intro-content {
     color: var(--content-text-color);
+    width: 90%;
 }
 
 /*          ------------------------> Component Section <------------------------       */
 .comp-heading {
     color: var(--primary-color);
+    margin-bottom: 2rem;
 }
 
 .comp-description {
     color: var(--content-text-color);
+    margin-bottom: 2rem;
+    width: 84%;
 }
 
 .class-to-apply-for-comp {
@@ -234,7 +238,7 @@ body {
     width: 80%;
     border: 5px solid var(--primary-color);
     padding: 3rem 0;
-    margin: 2rem 0;
+    margin: 2rem 0 4rem 0;
     column-gap: 1rem;
     row-gap: 1rem;
     flex-wrap: wrap;
